# compiler_project

./: .gitignore  Ast.h  CMakeCache.txt  CMakeLists.txt  ChemRenderer.cpp  ChemRenderer.h  Keyword.cpp  Keyword.h  LICENSE  Makefile  Parser.cpp  Parser.h  SvgRenderer.cpp  SvgRenderer.h  Translation.cpp  Translation.h  chem_http_server  chem_native_host  cmake_install.cmake  course_project_pre.tex  experiment_report.tex  http_server.cpp  my_chem_prompt_guide.md  native_host.cpp  parser  parser.cpp  parser.md  semantic.md  test_cases.md  test_cases_amino_acids.tsv  test_cases_complex.tsv  tokenizer  tokenizer.cpp  tokenizer.h  tokenizer.md  tokenizer_main.cpp
extension/: README.md  background.js  content.js  manifest.json
native-host/: com.compiler_project.my_chem.json.in
tools/: install_native_host.sh  render_cases.sh  render_complex_cases.sh
